<?xml version="1.0"?>
<package>
  <name>iiwa_3finger_description</name>
  <version>0.0.0</version>
  <description>The iiwa_3finger_description package</description>

  <maintainer email="senjing.zheng@gmail.com">Senjing Zheng</maintainer>

  <license>BSD</license>
  
  <build_depend>iiwa_description</build_depend>  
  <run_depend>iiwa_description</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
